# Nandi-Impact-Lab-2026

./: .gitignore  NANDI-context.md  README.md  SETUP_AND_TESTING.md  docker-compose.prod.yml
server/: .env.example  .gitignore  Dockerfile  INTEGRATION.md  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
server/api/: deps.py  main.py
server/api/routes/: blast.py  dashboard.py  intake.py  match.py  media.py  webhooks.py  ws.py
server/core/: config.py  database.py  logging_utils.py  redis_client.py  responses.py  security.py
server/db/: base.py  blast_models.py  models.py
server/docker/: postgres.Dockerfile
server/graph/: schema.cypher  seed_nashik.cypher
server/graph/queries/: duplicate_check.cypher  landmark_pattern.cypher  landmark_pattern_match.cypher  origin_city.cypher  sync_found_report.cypher  sync_missing_report.cypher  temporal.cypher  zone_plausibility.cypher
server/migrations/: env.py
server/migrations/versions/: 20270101_0001_initial_schema.py  (+3 more)
server/schemas/: common.py  match.py
server/scripts/: __init__.py  blast_worker.py  gen_i18n.py  reembed.py  refresh_views.py  seed_data.py  seed_neo4j.py  seed_postgres.py  seed_synthetic.py
server/services/: blast.py  case_events.py  dedup.py  embedding.py  extraction.py  hub.py  intake_pipeline.py  matcher.py  media_store.py  neo4j_client.py  notify.py  notify_bridge.py  otp.py  sarvam.py  scoring.py  sms.py  vision.py
server/tests/: conftest.py  test_app_smoke.py  test_embedding.py  test_matcher_db.py  test_scoring.py
(+49 files in other folders)
